# GWNMO

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
gwnmo/: __init__.py  __main__.py  common.py  core.py  datasets.py  example_todel.py  neptune_logger.py  train.py  trainfs.py  utils.py
gwnmo/data/: __init__.py  cifar10.py  fs_omniglot.py  svhn.py
gwnmo/data/fewshot/: __init__.py  fs_miniimagenet.py  fs_omniglot.py  utils.py
gwnmo/datasets_utils/: fmnist.py  fs_omniglot.py  mnist.py
gwnmo/experiments/: template.py  test.py
gwnmo/experiments/classic/: mnist.py
gwnmo/models/: backbone.py  body.py  conv.py  conv_net.py  feat_ex.py  feature_extractor.py  grad_fe.py  meta_opt.py  simple_cnn.py  target.py
gwnmo/modules/: adam.py  gwnmo.py  hypergrad.py  module_abc.py
gwnmo/modules/classic/: adam.py  gwnmo.py  hypergrad.py
gwnmo/modules/fewshot/: fsmodule_abc.py  gwnmofs.py  maml.py
omniglot_few_shot/: download_omniglot.sh  noLatin.json  rot_omniglot.py  write_cross_char_base_filelist.py  write_omniglot_filelist.py
