[tool.poetry]
name = "gwnmo"
version = "1.0.1"
description = ""
authors = ["OneAndZero24 <oneandzero24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
learn2learn = "^0.1.7"
torch = "^2.0.0"
torchvision = "^0.15.1"
neptune = "^1.1.1"
logging = "^0.4.9.6"
rich = "^13.3.3"
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"